--- a/templates/base.html
+++ b/templates/base.html
@@ -14,14 +14,18 @@
 
 <body>
 
+    {% include 'nav.html' %}
+
     <main>
         <div class="container">
-            <h1>{% block header %}The Last Social Media You'll Ever Need{% endblock %}</h1>
+            <h1>{% block header %}Лушее сообщество в мире! | Yatube{% endblock %}</h1>
             {% block content %}
             <!-- Содержимое страницы -->
             {% endblock %}
         </div>
     </main>
+
+    {% include 'footer.html' %}
 
 </body>
 
