--- a/posts/templates/posts/new_post.html
+++ b/posts/templates/posts/new_post.html
@@ -1,32 +1,40 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block title %}Новая запись{% endblock %}
+{% block title %}{% if is_edit %}Редактирование записи{% else %}Новая запись{% endif %}{% endblock %}
 
-{% block header %}{% endblock %}
+{% block header %}{% if is_edit %}Редактировать запись{% else %}Добавить запись{% endif %}{% endblock %}
 
 {% block content %}
 {% load user_filters %}
-    <form method="post" action="{% url 'new_post' %}">
+    <form method="post" enctype="multipart/form-data" action={% if post %} 
+        "{% url 'post_edit' username=post.author.username post_id=post.id %}"
+        {% else %}
+        "{% url 'new_post' %}"
+        {% endif %}>
+
         {% csrf_token %}
 
         {% for field in form %}
             <div class="form-group row" aria-required={% if field.field.required %} "true" {% else %} "false" {% endif %}>
                 <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}:{% if field.field.required %}<span class="required">*</span>{% endif %}</label>
                 <div class="col-md-6">
-
-                    {{ field|addclass:"form-control" }}
-
+                    {{ field|addclass:'form-control' }}
                     {% if field.help_text %}
                         <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
                     {% endif %}
                 </div> 
             </div>
         {% endfor %}
-
-        <div class="col-md-6 offset-md-4" style="text-align:center">              
-            <button type="submit" class="btn btn-primary">
-                Добавить запись
-            </button>
+        <div class="col-md-6 offset-md-4" style="text-align:center">
+            {% if is_edit %} 
+                <button type="submit" class="btn btn-primary">
+                    Сохранить
+                </button>
+            {% else %}
+                <button type="submit" class="btn btn-primary">
+                    Добавить
+                </button>
+            {% endif %}
         </div>
     </form>
 {% endblock %}
