--- a/templates/group.html
+++ b/templates/group.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block title %}Записи сообщества {{ group.title }}{% endblock %}
 
@@ -6,11 +6,13 @@
 
 {% block content %}
     <p>{{ group.description }}</p>
-    {% for post in posts %}
-        <h3>
-            Автор: {{ post.author.get_full_name }}, дата публикации: {{ post.pub_date|date:"d M Y" }}
-        </h3>
-        <p>{{ post.text|linebreaksbr }}</p>
-        <hr>
-    {% endfor %}
+    {% load cache %}
+        {% cache 20 group_page page %}
+            {% for post in page %}
+                {% include 'posts/includes/post_item.html' with post=post %}
+            {% endfor %}
+    {% endcache %}
+    {% if page.has_other_pages %}
+        {% include 'includes/paginator.html' with items=page paginator=paginator %}
+    {% endif %}
 {% endblock %}
