--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block title %}Войти{% endblock %}
 
@@ -34,14 +34,14 @@
                     <div class="form-group row">
                         <label for="{{ form.username.id_for_label }}" class="col-md-4 col-form-label text-md-right">Имя пользователя</label>
                         <div class="col-md-6">
-                            {{ form.username|addclass:"form-control" }}
+                            {{ form.username|addclass:'form-control' }}
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label for="{{ form.password.id_for_label }}" class="col-md-4 col-form-label text-md-right">Пароль</label>
                         <div class="col-md-6">
-                            {{ form.password|addclass:"form-control" }}
+                            {{ form.password|addclass:'form-control' }}
                         </div>
                     </div>
 
