--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block title %}Новый пароль{% endblock %}
 
@@ -21,7 +21,7 @@
                         <div class="form-group row" aria-required= {% if field.field.required %} "true" {% else %} "false" {% endif %}>
                             <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}{% if field.field.required %}<span class="required">*</span>{% endif %}</label>
                             <div class="col-md-6">
-                                {{ field|addclass:"form-control" }}
+                                {{ field|addclass:'form-control' }}
                             </div>                
                         </div>
                     {% endfor %}
